kfreebsd-10 (10.0~svn253832-2) UNRELEASED; urgency=low

  * Harmonize kernel config with upstream, reducing the GENERIC delta.
    - Let GENERIC define fdc. DEBIAN can override this afterwards.
    - Let GENERIC define lpt, ppi, tun, gif and faith. There seems to
      be no particular reason to diverge on these.
    - Don't include LINPROCFS and COMPAT_LINUX in GENERIC. DEBIAN already does.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 21:44:17 +0200

kfreebsd-10 (10.0~svn253832-1) experimental; urgency=low

  * New upstream snapshot.
    - Implements freebsd32_ktimer_* syscalls. (Closes: #666730)
    - if_run now disabled due to WITHOUT_SOURCELESS_UCODE.

  [ Robert Millan ]
  * Remove 951_disable_mk_magic.diff, use -DWITHOUT_CTF instead.
  * Split kernel_cc into cc_cmd and cc_pkg (this makes it easier to
    enable clang when desired).
  * Bump B-D on freebsd-buildutils to 10~svn251967-3.
  * mount_remount.diff: Implement "mount -o remount" glue in kernel like
    upstream wants.

  [ Guillem Jover ]
  * Switch to canonical Vcs URLs.
  * Place transitional packages on Section oldlibs and Priority extra.

  [ Petr Salinger ]    
  * Re-enable 901_disable_optimization_2.diff. See: #718250.

 -- Robert Millan <rmh@debian.org>  Fri, 02 Aug 2013 21:14:53 +0200

kfreebsd-10 (10.0~svn252032-1) experimental; urgency=low

  [Petr Salinger]   
  * New upstream snapshot.
    - fix for FreeBSD-SA-13:06.mmap (CVE-2013-2171). (Closes: #712892)
  * refresh all patches
  * switch to gcc-4.8
  * disable 901_disable_optimization_2.diff
  * bump Breaks of grub due to #699002.

  [Steven McDonald]
  * add 922_cc_version.diff
  * temporary patch debugger.diff

  [ Robert Millan ]
  * patches/913_uudecode.diff: Remove. It is pointless when using
    WITHOUT_SOURCELESS.
  * Simplify handling of debug mode. To enable/disable debug options,
    just edit sys/conf/DEBIAN in 999_config.diff and comment/uncomment
    the appropriate line.
  * Use xz for deb compression.
